# rusty_fractals

./: .gitignore  Cargo.toml  DEV.md  LICENSE.md  MIGRATION.md  README.md
fractal_collatz_conjecture/: Cargo.toml
fractal_collatz_conjecture/src/: main.rs
fractal_collatz_conjecture_orbits/: Cargo.toml
fractal_collatz_conjecture_orbits/src/: main.rs
fractal_collatz_mandelbrot/: Cargo.toml
fractal_collatz_mandelbrot/src/: main.rs
fractal_czech/: Cargo.toml  README.md
fractal_czech/src/: main.rs
fractal_euler/: Cargo.toml  README.md
fractal_euler/src/: euler.rs  main.rs  mandelbrot.rs  mem_euler.rs  pixel.rs
fractal_fat_star/: Cargo.toml
fractal_fat_star/src/: main.rs
fractal_fat_star_magnific/: Cargo.toml
fractal_fat_star_magnific/src/: main.rs
fractal_fat_star_tentacle/: Cargo.toml
fractal_fat_star_tentacle/src/: main.rs
fractal_glorious_head/: Cargo.toml
fractal_glorious_head/src/: main.rs
fractal_head/: Cargo.toml  README.md
fractal_head/src/: main.rs
fractal_infinity/: Cargo.toml
fractal_infinity/src/: infinity.rs  main.rs
fractal_infinity_perfection/: Cargo.toml
fractal_infinity_perfection/src/: main.rs
fractal_infinity_top/: Cargo.toml
fractal_infinity_top/src/: main.rs
fractal_lib/: Cargo.toml
fractal_lib/src/: collatz_mem.rs  color_palette.rs  color_palettes.rs  domain.rs  domain_area.rs  domain_element.rs  fractal.rs  fractal_domain_pixel.rs  fractal_stats.rs  lib.rs  mathematician.rs  mem.rs  mem_collatz.rs  mem_euler.rs  mem_phoenix.rs  pixel_states.rs  resolution_multiplier.rs
fractal_lotus/: Cargo.toml  README.md
fractal_lotus/src/: main.rs
fractal_lukas/: Cargo.toml  README.md
fractal_lukas/src/: main.rs
fractal_mandelbrot/: Cargo.toml  README.md
fractal_mandelbrot/src/: main.rs
fractal_mandelbrot_of_mandelbrot/: Cargo.toml  README.md
fractal_mandelbrot_of_mandelbrot/src/: main.rs
fractal_nebula/: Cargo.toml  README.md
fractal_nebula/src/: main.rs  paths.rs
fractal_nebula_of_nebula/: Cargo.toml  README.md
fractal_nebula_of_nebula/src/: main.rs
fractal_nebula_perfection/: Cargo.toml
fractal_nebula_perfection/src/: main.rs
fractal_nebula_side/: Cargo.toml
fractal_nebula_side/src/: main.rs
fractal_nebula_top/: Cargo.toml
fractal_nebula_top/src/: main.rs
fractal_science/: Cargo.toml  README.md
fractal_science/src/: main.rs
rusty_fractals/: Cargo.toml
rusty_fractals/src/: application.rs  area.rs  config.rs  constants.rs  data.rs  data_image.rs  data_px.rs  data_px3.rs  engine.rs  euler.rs  files.rs  fractal.rs  fractal_log.rs  fractal_stats.rs  lib.rs  machine.rs  machine_mandelbrot.rs  main.rs  mathematician.rs  mem.rs  mem_collatz.rs  mem_euler.rs  mem_phoenix.rs  palette.rs  palette_utils.rs  palettes.rs  perfect_color_distribution.rs  perfect_color_distribution_euler.rs  perfect_color_distribution_nebula.rs  perfect_colour_distribution.rs  pixel.rs  pixel_states.rs  resolution_multiplier.rs  rusty_tests.rs  window.rs
rusty_fractals_common/: Cargo.toml
rusty_fractals_common/src/: area.rs  calc.rs  constants.rs  data_image.rs  data_px.rs  domain.rs  fractal.rs  fractal_data.rs  fractal_log.rs  fractal_stats.rs  lib.rs  mem.rs  mem_collatz.rs  mem_phoenix.rs  palette.rs  palette_utils.rs  palettes.rs  perfect_color_distribution.rs  perfect_colour_distribution.rs  pixel_states.rs  resolution_multiplier.rs  result_data.rs  result_data_dynamic.rs  result_data_mandelbrot.rs  result_data_static.rs  target.rs
rusty_fractals_core/: Cargo.toml  overview.txt
rusty_fractals_core/src/: application.rs  calc.rs  data_px.rs  engine.rs  files.rs  fractal.rs  fractal_log.rs  fractal_path.rs  fractal_stats.rs  lib.rs  log.rs  machine.rs  machine_mandelbrot.rs  mathematician.rs  mem.rs  mem_collatz.rs  mem_phoenix.rs  palette_utils.rs  rusty_tests.rs  target.rs  window.rs
rusty_fractals_domain/: Cargo.toml
rusty_fractals_domain/src/: domain.rs  domain_area.rs  domain_element.rs  domain_pixel.rs  domain_pixel_colors.rs  lib.rs  pixel_states.rs  resolution_multiplier.rs
rusty_fractals_image/: Cargo.toml
rusty_fractals_image/src/: color_palette.rs  color_palettes.rs  image_pixel.rs  lib.rs  mem_phoenix.rs  palettes.rs  pixel_states.rs
rusty_fractals_result/: Cargo.toml
rusty_fractals_result/src/: fractal_result.rs  lib.rs  palette.rs  palette_utils.rs  palettes.rs  perfect_color_distribution.rs  result.rs  result_data.rs  result_data_static.rs  result_element_static.rs  result_pixel.rs  result_pixels.rs
src/: main.rs
