[package]
name = "fractal_collatz_conjecture"
version = "0.1.0"
edition = "2021"
authors = ["lukas"]
keywords = ["fractal"]

[dependencies]
rusty_fractals_core = { path = "../rusty_fractals_core" }
rusty_fractals_domain = { path = "../rusty_fractals_domain" }
rusty_fractals_common = { path = "../rusty_fractals_common" }
