[package]
name = "fractal_infinity"
version = "0.1.0"
edition = "2021"
authors = ["lukas"]
keywords = ["fractal"]

[dependencies]
rusty_fractals_core = { path = "../rusty_fractals_core" }
rusty_fractals_domain = { path = "../rusty_fractals_domain" }
rusty_fractals_result = { path = "../rusty_fractals_result" }
log4rs = "1.2.0"
log = "0.4.17"
