[package]
name = "fractal_nebula"
version = "0.1.0"
edition = "2021"
authors = ["lukas"]
keywords = ["fractal"]

[dependencies]
rusty_fractals_core = { path = "../rusty_fractals_core" }
rusty_fractals_domain = { path = "../rusty_fractals_domain" }
rusty_fractals_result = { path = "../rusty_fractals_result" }
rusty_fractals_common = { path = "../rusty_fractals_common" } # TODO remove?
fltk = "1.3.27"
image = "0.24.5"
rgb = "0.8"

