[package]
name = "rusty_fractals_core"
version = "0.1.0"
edition = "2021"
authors = ["lukas"]
keywords = ["fractal"]

[dependencies]
rusty_fractals_common = { path = "../rusty_fractals_common" }
rayon = "1.6.1"
image = "0.24.5"
rand = "0.8.5"
fltk = "1.3.31"
rgb = "0.8"

[badges]
maintenance = { status = "actively-developed" }
