[package]
name = "rusty_fractals_core"
version = "0.1.0"
edition = "2021"
authors = ["lukas"]
keywords = ["fractal"]

[dependencies]
crate = { path = "../crate" }
rayon = "1.10.0"
image = "0.25.5"
rand = "0.8.5"
fltk = "1.3.31"
rgb = "0.8.36"
chrono = "0.4.39"

[badges]
maintenance = { status = "actively-developed" }
