[package]
name = "rusty_fractals_result"
version = "0.1.0"
edition = "2021"
authors = ["lukas"]
keywords = ["fractal"]

[dependencies]
rusty_fractals_common = { path = "../rusty_fractals_common" }
image = "0.24.5"
rgb = "0.8"
log4rs = "1.2.0"
log = "0.4.17"

[badges]
maintenance = { status = "actively-developed" }
